# cloud_computing_1

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: examples.py
infrastructure/: main.tf  terraform.tfstate  terraform.tfvars  variables.tf
infrastructure/modules/application_gateway/: main.tf  variables.tf
infrastructure/modules/application_service/: main.tf  outputs.tf  variables.tf
infrastructure/modules/blob_storage/: main.tf  outputs.tf  quotes.json  variables.tf
infrastructure/modules/postgreSQL/: main.tf  outputs.tf  variables.tf
infrastructure/modules/resource_group/: main.tf  outputs.tf  variables.tf
infrastructure/modules/vnet/: main.tf  outputs.tf  variables.tf
test/integration/: integration_example.py
test/unit/: test_example.py
