[project]
name = "examples-api"
version = "1.0.0"
description = "Simple API that returns example records from a database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastapi-cli>=0.0.5",
    "psycopg2-binary>=2.9.9",
    "newrelic>=10.0.0",
    "azure-storage-blob>=12.23.1",
    "azure-identity>=1.18.0",
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.2",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3",
]
